# advent

day01/: day1.cabal
day01/app/: Main.hs
day01/src/: Lib.hs
day01/test/: Spec.hs
day02/: day2.cabal
day02/app/: Main.hs
day02/src/: Lib.hs
day02/test/: Spec.hs
day03/: day3.cabal
day03/app/: Main.hs
day03/src/: Lib.hs
day03/test/: Spec.hs
day04/: day4.cabal
day04/app/: Main.hs
day04/src/: Lib.hs
day04/test/: Spec.hs
day07/: LICENSE  day7.cabal
day07/app/: Main.hs
day07/src/: Eval.hs  Parser.hs
day07/test/: Spec.hs
day7/: day7.cabal
day7/app/: Main.hs
day7/src/: Data.hs  Eval.hs  Parser.hs
day7/test/: Spec.hs
problems/: README.md  download.py  requirements.txt
problems/day01/: description.md
problems/day02/: description.md
problems/day03/: description.md
problems/day04/: description.md
problems/day05/: description.md
problems/day06/: description.md
problems/day07/: description.md
problems/day08/: description.md
problems/day09/: description.md
problems/day10/: description.md
problems/day11/: description.md
problems/day12/: description.md
problems/day13/: description.md
problems/day14/: description.md
problems/day15/: description.md
problems/day16/: description.md
problems/day17/: description.md
problems/day18/: description.md
problems/day19/: description.md
problems/day20/: description.md
problems/day21/: description.md
problems/day22/: description.md
problems/day23/: description.md
problems/day24/: description.md
problems/day25/: description.md
