name:                day7
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/rraval/day7#readme
license:             BSD3
license-file:        LICENSE
author:              Ronuk Raval
maintainer:          ronuk.raval@gmail.com
copyright:           Copyright: (c) 2016 Ronuk Raval
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data, Eval
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable day7-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , day7
  default-language:    Haskell2010

test-suite day7-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , day7
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rraval/day7
